Closed
Bug 727344
Opened 14 years ago
Closed 14 years ago
JS OOM Testing: Assertion failure: verifiedRange, at methodjit/BaseCompiler.h:123
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla14
People
(Reporter: decoder, Unassigned)
References
Details
(Keywords: assertion, testcase, Whiteboard: js-triage-needed)
Attachments
(1 file)
|
3.53 KB,
patch
|
dvander
:
review+
|
Details | Diff | Splinter Review |
The following command asserts on mozilla-central revision d45c7d7b0079:
js -m -n -a -A 1777 -f js/src/tests/shell.js -f js/src/tests/ecma/shell.js -f js/src/tests/ecma/Expressions/shell.js -f js/src/tests/ecma/Expressions/11.4.1.js
This could be related to bug 727331, as I hit that assertion afterwards.
Comment 1•14 years ago
|
||
Bogus assert, if linker initialization fails then its destructor will botch.
Attachment #613603 -
Flags: review?(dvander)
Updated•14 years ago
|
Attachment #613603 -
Flags: review?(dvander) → review+
Comment 3•14 years ago
|
||
Comment 4•14 years ago
|
||
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla14
You need to log in
before you can comment on or make changes to this bug.
Description
•