Don't botch assert after OOM while linking ICs, bug 727344. r=dvander